# MoveDetect

./: CMakeLists.txt  MoveDetect.cpp  MoveDetect.hpp  main.cpp  readme.md
other/: movement_test_01.m4v  movement_test_02.m4v
src-dox/: 01_mainpage.dox  02_summary.dox  03_license.dox  CMakeLists.txt  Doxyfile.in
src-lib/: CMakeLists.txt  MoveDetect.cpp  MoveDetect.hpp
src-test/: CMakeLists.txt  main.cpp
